docs/spec/grammar/conformance/reject/07-empty.myc
// rejected: an empty program (no colony header) is not well-formed
